--- a/web/components/teamLandingPage/teamLandingPage.scss
+++ b/web/components/teamLandingPage/teamLandingPage.scss
@@ -338,8 +338,10 @@
   margin-right: 1em;
 }
 
-.sos-table.past table td {
+.sos-table.past table td,
+.sos-table.future table td {
   border: 1px solid #505050;
+  padding: 8px;
 }
 
 .sos-table.future {
@@ -387,7 +389,7 @@
 .sos-container {
   padding-left: 1em;
   padding-right: 1em;
-  width: 33%;
+  width: 100%;
 }
 
 .sos-container h2 {
