--- a/web/components/LinemateMatrix/index.module.scss
+++ b/web/components/LinemateMatrix/index.module.scss
@@ -2,4 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  .cell {
+    width: 20.5px;
+    height: 20.5px;
+    border: 1px solid #fff;
+
+    &:hover {
+      border-color: darkorange;
+    }
+    & .content {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
